@@ -1,6 +1,7 @@
 Revision history for Getopt-Long
 
 {{$NEXT}}
+    - Added compat-space option
 
 0.3.2  2020-12-20T18:41:16+01:00
     - Add support for Numeric arguments
